# esp32_dfinity_agent

./: .gitignore  LICENCE  README.md  debug_log.txt  dfinityAgent.cpp  dfinityAgent.h  tmp.txt
earthstream/: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
earthstream/src/earthstream_backend/: Cargo.toml  earthstream_backend.did
earthstream/src/earthstream_backend/src/: lib.rs
esp32-bluetooth/: package-lock.json  package.json
esp32-bluetooth/src/: App.js
http_agent/: candid.cpp  http_agent.cpp  http_agent.h  keypair.cpp  request.h  utils.cpp
sketches/LoRa_rx_test/: LoRa_rx_test.ino
sketches/LoRa_tx_test/: LoRa_tx_test.ino
sketches/agent_demo/: agent_demo.ino  candid.cpp  candid.h  http_agent.cpp  http_agent.h  keypair.cpp  keypair.h  request.cpp  request.h  response.cpp  utils.cpp  utils.h
sketches/bluetooth_demo/: bluetooth_demo.ino  eeprom_vector_storage.h  keypair.cpp  keypair.h  utils.cpp  utils.h
sketches/cbor_demo/: cbor_demo.ino
sketches/gateway_demo/: candid.cpp  candid.h  eeprom_vector_storage.cpp  gateway_demo.ino  http_agent.cpp  http_agent.h  keypair.cpp  response.h  utils.cpp
sketches/http_demo/: http_demo.ino
sketches/keypair_demo/: keypair_demo.ino
sketches/request_demo/: request_demo.ino
sketches/sensor_demo/: keypair.h  sensor_demo.ino
sketches/sha256_demo/: sha256_demo.ino
src/: Transaction.cpp  Transaction.h  keypair.cpp  keypair.h
test/: decode_hex.js  package-lock.json  package.json  test_cbor.js  test_query.js  test_sig.js  verify_request.js  verify_sig.js
(+28 files in other folders)
