[package]
name = "earthstream_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15.0"
serde = "1.0"
sha2 = "0.10.8"
ic-cdk-macros = "0.15.0"
hex = "0.4.3"
byteorder = "1.4.3"
